--- a/pages/9294.html
+++ b/pages/9294.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1054,6 +1054,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Deligne%27s+theorem+on+tensor+categories'>Deligne&#39;s theorem on tensor categories</a> – <a href='Deligne&#39;s+theorem+on+tensor+categories#RelevanceForSupersymmetry'>Relevance for Supersymmetry</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/super+multiplet'>supermultiplet</a></p>
 </li>
 </ul>
@@ -1066,7 +1070,7 @@ margin-left: 0em;
 <li id='Wigner39'><a class='existingWikiWord' href='/nlab/show/Eugene+Wigner'>Eugene Wigner</a>, <em>On unitary representations of the inhomogeneous Lorentz group</em>, Annals of Mathematics, 40 (1939) 149–204</li>
 </ul>
 
-<p>The observation that Wigner’s representations <math class='maruku-mathml' display='inline' id='mathml_0bb7309c91f19c57e415ee7099f70f430d53ca27_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>U</mi> <mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>U_{(-)}</annotation></semantics></math> are those for which all the maps <math class='maruku-mathml' display='inline' id='mathml_0bb7309c91f19c57e415ee7099f70f430d53ca27_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><mo stretchy='false'>⟨</mo><mi>Φ</mi><mo stretchy='false'>|</mo><msub><mi>U</mi> <mi>g</mi></msub><mi>Ψ</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>g \mapsto \langle \Phi \vert U_g \Psi \rangle</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable</a> and their correspondence of irreducible unitary representations to <a class='existingWikiWord' href='/nlab/show/induced+representation'>induced representations</a> of irreps of the <a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer group</a> of a given momentum is (e.g. <a href='#Dragon16'>Dragon 16</a>) due to</p>
+<p>The observation that Wigner’s representations <math class='maruku-mathml' display='inline' id='mathml_f0132925292f4a314927362d6b4d9de59ef9eae1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>U</mi> <mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>U_{(-)}</annotation></semantics></math> are those for which all the maps <math class='maruku-mathml' display='inline' id='mathml_f0132925292f4a314927362d6b4d9de59ef9eae1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><mo stretchy='false'>⟨</mo><mi>Φ</mi><mo stretchy='false'>|</mo><msub><mi>U</mi> <mi>g</mi></msub><mi>Ψ</mi><mo stretchy='false'>⟩</mo></mrow><annotation encoding='application/x-tex'>g \mapsto \langle \Phi \vert U_g \Psi \rangle</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable</a> and their correspondence of irreducible unitary representations to <a class='existingWikiWord' href='/nlab/show/induced+representation'>induced representations</a> of irreps of the <a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer group</a> of a given momentum is (e.g. <a href='#Dragon16'>Dragon 16</a>) due to</p>
 
 <ul>
 <li id='Mackey68'><a class='existingWikiWord' href='/nlab/show/George+Mackey'>George Mackey</a>, <em>Induced Representations of Groups and Quantum Mechanics</em>, W. A. Benjamin, New York, 1968</li>
@@ -1096,14 +1100,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 25, 2016 13:31:50 
+  Revised on November  2, 2017 06:13:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.19)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wigner+classification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wigner+classification/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Wigner+classification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wigner+classification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wigner+classification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wigner+classification/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Wigner+classification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wigner+classification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
