--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,23 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_1ef570c5f52fdc2b6c03a4346d072d7bfcd670df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>⋅</mo><mi>g</mi><mo>=</mo><mover><mrow><mover><mi>f</mi><mo>^</mo></mover><mo>⋆</mo><mover><mi>g</mi><mo>^</mo></mover></mrow><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>
-  f \cdot g 
-  = 
-  \widehat{\widehat{f} \star \widehat{g}}
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c8c4c773cf26a07212a4517f009879c5bd88341b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><msup><mrow><mo>(</mo><msub><mi>Φ</mi> <mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>)</mo></mrow> <mo>*</mo></msup></mrow></mpadded></msup></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \array{
+    &amp;&amp; C^\infty(E)
+    \\
+    &amp; {}^{\mathllap{\left( \Phi_{(-)}(-) \right)^\ast } }
+    }
+  \,.
 
 </annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November  1, 2017 14:18:38 
+  Revised on November  2, 2017 07:40:19 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1194" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1194 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1195" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1195 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
