--- a/pages/18739.html
+++ b/pages/18739.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      harmonic analysis - contents in nLab
+      Fourier inversion theorem in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      harmonic analysis - contents
+      Fourier inversion theorem
   </h1>
 
 
@@ -308,7 +308,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='harmonic_analysis'>Harmonic analysis</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
 
 <p><strong>Definitions</strong></p>
 
@@ -338,24 +345,47 @@ margin-left: 0em;
 
 <p><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></p>
 </div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_theorems'>Related theorems</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, the <em>Fourier inversion theorem</em> states that the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> is its own <a class='existingWikiWord' href='/nlab/show/inverse+function'>inverse</a>, up to a sign of the argument.</p>
+
+<p>For Fourier transform over <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian spaces</a>, see e.g. <a href='#Hoermander90'>Hörmander 90 ,theorem 7.1.5, theorem 7.1.10</a>, <a href='Fourier+transform#FourierInversion'>this prop.</a>.</p>
+
+<h2 id='related_theorems'>Related theorems</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='Hoermander90'><a class='existingWikiWord' href='/nlab/show/Lars+H%C3%B6rmander'>Lars Hörmander</a>, theorem 7.1.5 of <em>The analysis of linear partial differential operators</em>, vol. I, Springer 1983, 1990</li>
+</ul>
+</div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 08:13:27 
+  Revised on November  2, 2017 08:54:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/harmonic+analysis+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+analysis+-+contents/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/harmonic+analysis+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+analysis+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fourier+inversion+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fourier+inversion+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Fourier+inversion+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fourier+inversion+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/harmonic+analysis+-+contents" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Fourier+inversion+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/harmonic+analysis+-+contents" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Fourier+inversion+theorem" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/harmonic+analysis+-+contents" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Fourier+inversion+theorem" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
