--- a/pages/18690.html
+++ b/pages/18690.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,24 +312,36 @@ margin-left: 0em;
 <li><a href='http://www.jonmsterling.com/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f471ac4a4c9342b9c5c8a0e9fbfabfc1ec86bab0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f53eac972e846190f804ff19fecdb61e00008c40_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/meaning+explanation'>meaning explanation</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/meaning+explanation'>meaning explanation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cubical+type+theory'>cubical type theory</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+</p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on October 17, 2017 00:23:13 
+  Revised on November  2, 2017 09:55:40 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.50.90)
+  (195.37.234.78)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jon+Sterling" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Jon+Sterling" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jon+Sterling/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Jon+Sterling" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jon+Sterling" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
