--- a/pages/18741.html
+++ b/pages/18741.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Thierry Coquand in nLab
+      Anders Mörtberg in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Thierry Coquand
+      Anders Mörtberg
   </h1>
 
 
@@ -308,48 +308,40 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Thierry Coquand is a professor in computer science at the University of Gothenburg, Sweden.</p>
-
-<ul>
-<li><a href='http://www.cse.chalmers.se/~coquand/'>webpage</a></li>
+    <ul>
+<li><a href='http://www.cs.cmu.edu/~amoertbe/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_8768e2ec6eba45223f981b5207fe25e60089337c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d252ae56d5a8e16c204849ce8273347cd8af6ca1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/calculus+of+constructions'>calculus of constructions</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Coq'>Coq</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/cubical+type+theory'>cubical type theory</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/cubical+type+theory'>cubical type theory</a></li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 10:25:53 
+  Created on November  2, 2017 10:22:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.37.234.78)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Thierry+Coquand" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Thierry+Coquand/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Thierry+Coquand" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Thierry+Coquand" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Anders+M%C3%B6rtberg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Thierry+Coquand" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Anders+M%C3%B6rtberg" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Thierry+Coquand" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Anders+M%C3%B6rtberg" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Thierry+Coquand" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Anders+M%C3%B6rtberg" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
