--- a/pages/3612.html
+++ b/pages/3612.html
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_66a704222b3ecbfb7800f6605db55b5befcdb459_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_011432cccb677bfe049aec15e10459ce4557c9e2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -696,7 +696,13 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/computational+type+theory'>computational type theory</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Coq'>Coq</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/computational+type+theory'>computational type theory</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -744,14 +750,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 28, 2016 05:49:18 
-  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (89.204.139.104)
+  Revised on November  2, 2017 10:25:32 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (195.37.234.78)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/calculus+of+constructions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/calculus+of+constructions/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/calculus+of+constructions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/calculus+of+constructions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/calculus+of+constructions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/calculus+of+constructions/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/calculus+of+constructions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/calculus+of+constructions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
