--- a/pages/17751.html
+++ b/pages/17751.html
@@ -308,18 +308,176 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>d* = coderivative = <em>d</em> also written as lower case Greek delta. Here d is exterior derivative.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='functional_analysis'>Functional analysis</h4>
+
+<div class='hide'>
+<ul>
+<li><strong><a class='existingWikiWord' href='/nlab/show/functional+analysis'>Functional Analysis</a></strong></li>
+</ul>
+
+<h2 id='overview_diagrams'>Overview diagrams</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/TVS+relationships'>topological vector spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/diagram+of+LCTVS+properties'>locally convex topological vector spaces</a></p>
+</li>
+</ul>
+
+<h2 id='basic_concepts'>Basic concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Banach+space'>Banach Spaces</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/reflexive+Banach+space'>reflexive</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert Spaces</a>, <a class='existingWikiWord' href='/nlab/show/Fr%C3%A9chet+space'>Fréchet Spaces</a>, <a class='existingWikiWord' href='/nlab/show/Sobolev+space'>Sobolev spaces</a>, <a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>Lebesgue Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bornological+topological+vector+space'>Bornological Vector Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/barreled+topological+vector+space'>Barrelled Vector Spaces</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/linear+map'>linear operator</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bounded+operator'>bounded</a>, <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded</a>, <a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>self-adjoint</a>, <a class='existingWikiWord' href='/nlab/show/compact+operator'>compact</a>, <a class='existingWikiWord' href='/nlab/show/Fredholm+operator'>Fredholm</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectrum+of+an+operator'>spectrum of an operator</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebras</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/functional+calculus'>functional calculus</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-Weierstrass+theorem'>Stone-Weierstrass theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+theory'>spectral theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spectral+theorem'>spectral theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand+duality'>Gelfand duality</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functional+calculus'>functional calculus</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Riesz+representation+theorem'>Riesz representation theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measure+theory'>measure theory</a></p>
+</li>
+</ul>
+
+<h2 id='topics_in_functional_analysis'>Topics in Functional Analysis</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/basis+in+functional+analysis'>Bases</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theories+in+functional+analysis'>Algebraic Theories in Functional Analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/an+elementary+treatment+of+Hilbert+spaces'>An Elementary Treatment of Hilbert Spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/isomorphism+classes+of+Banach+spaces'>When are two Banach spaces isomorphic?</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/functional+analysis+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>:</mo><mi>H</mi><mo>→</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>A: H\to H</annotation></semantics></math> be an <a class='existingWikiWord' href='/nlab/show/unbounded+operator'>unbounded operator</a> on a <a class='existingWikiWord' href='/nlab/show/Hilbert+space'>Hilbert space</a> <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math>. An unbounded operator <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>A^*</annotation></semantics></math> is its <strong><a class='existingWikiWord' href='/nlab/show/adjoint+operator'>adjoint</a></strong> if</p>
+
+<ul>
+<li><math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>A</mi><mi>x</mi><mo stretchy='false'>|</mo><mi>y</mi><mo stretchy='false'>)</mo><mo>=</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>|</mo><msup><mi>A</mi> <mo>*</mo></msup><mi>y</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(A x|y) = (x|A^*y)</annotation></semantics></math> for all <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>∈</mo><mi>dom</mi><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>x\in dom(A)</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>y</mi><mo>∈</mo><mi>dom</mi><mo stretchy='false'>(</mo><msup><mi>A</mi> <mo>*</mo></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>y\in dom(A^*)</annotation></semantics></math>; and</li>
+
+<li>every <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> satisfying the above property for <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>A^*</annotation></semantics></math> is a restriction of <math class='maruku-mathml' display='inline' id='mathml_27d963cee5d5d86aead29ef036526a34fd715d72_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</li>
+</ul>
+
+<p>An adjoint does not need to exist in general.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>self-adjoint operator</a></li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Created on November  3, 2016 00:36:31 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (108.52.110.211)
+  Revised on November  2, 2017 11:33:09 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (129.12.18.176)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/adjoint+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/adjoint+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+operator/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/adjoint+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
