--- a/pages/10082.html
+++ b/pages/10082.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -339,7 +339,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -497,7 +497,33 @@ margin-left: 0em;
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>L-2 space</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>L-2 space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous function</a>, <a class='existingWikiWord' href='/nlab/show/differentiable+map'>differentiable function</a>, <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measure+space'>integrable function</a>, <a class='existingWikiWord' href='/nlab/show/square+integrable+function'>square-integrable function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/bounded+function'>bounded function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/compact+support'>compactly supported function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/measurable+function'>measurable function</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>rapidly decreasing function</a></p>
+</li>
 </ul>
 
 <p>
@@ -509,14 +535,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  8, 2017 16:24:22 
+  Revised on November  2, 2017 15:40:52 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/square+integrable+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/square+integrable+function/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/square+integrable+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/square+integrable+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/square+integrable+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/square+integrable+function/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/square+integrable+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/square+integrable+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
