--- a/pages/18743.html
+++ b/pages/18743.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      bounded function in nLab
+      rapidly decreasing function in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      bounded function
+      rapidly decreasing function
   </h1>
 
 
@@ -365,24 +365,88 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/function'>function</a> to a <a class='existingWikiWord' href='/nlab/show/metric+space'>metric space</a> is <em>bounded</em> if its <a class='existingWikiWord' href='/nlab/show/image'>image</a> is a <a class='existingWikiWord' href='/nlab/show/bounded+set'>bounded subset</a>.</p>
+<div class='num_defn' id='RapidlyDecreasingFunction'>
+<h6 id='definition_2'>Definition</h6>
 
-<p>More generally there is a concept of bounded function between <a class='existingWikiWord' href='/nlab/show/bornological+set'>bornological sets</a>.</p>
+<p><strong>(rapidly decreasing function)</strong></p>
+
+<p>For <math class='maruku-mathml' display='inline' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math>, an <em><a class='existingWikiWord' href='/nlab/show/measure+space'>integrable function</a></em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'> 
+  f \colon \mathbb{R}^n \to \mathbb{R}
+
+</annotation></semantics></math></div>
+<p>on a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> is called <em>rapidly decreasing</em> if for all <math class='maruku-mathml' display='inline' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>α</mi><mo>∈</mo><msup><mi>ℕ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\alpha \in \mathbb{N}^n</annotation></semantics></math> the product function</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>↦</mo><msup><mi>x</mi> <mi>α</mi></msup><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  x \mapsto x^\alpha f(x)
+
+</annotation></semantics></math></div>
+<p>is a <a class='existingWikiWord' href='/nlab/show/bounded+function'>bounded function</a>. Here</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mi>α</mi></msup><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>1</mn></msup><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>α</mi> <mn>1</mn></msub></mrow></msup><mi>⋯</mi><mo stretchy='false'>(</mo><msup><mi>x</mi> <mi>n</mi></msup><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>α</mi> <mi>n</mi></msub></mrow></msup></mrow><annotation encoding='application/x-tex'>
+  x^\alpha \;\coloneqq\; (x^1)^{\alpha_1} \cdots (x^n)^{\alpha_n}
+
+</annotation></semantics></math></div>
+<p>is any given product of powers of the canonical <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate functions</a>.</p>
+</div>
+
+<div class='num_defn' id='FunctionsWithRapidlyDecreasingPartialDerivatives'>
+<h6 id='definition_3'>Definition</h6>
+
+<p><strong>(function with rapidly decreasing <a class='existingWikiWord' href='/nlab/show/partial+differentiation'>partial derivatives</a>)</strong></p>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth function</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⟶</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
+  f \;\colon\; \mathbb{R}^n \longrightarrow \mathbb{R}
+
+</annotation></semantics></math></div>
+<p>is a <em>function with rapidly decreasing partial derivatives</em> or <em>Schwartz function</em> for short, if all its <a class='existingWikiWord' href='/nlab/show/partial+differentiation'>partial derivatives</a> are rapidly decreasing functions in the sense of def. <a class='maruku-ref' href='#RapidlyDecreasingFunction'>1</a>, hence if for all <math class='maruku-mathml' display='inline' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='0em' rspace='thinmathspace'>alphe</mo><mo>,</mo><mi>β</mi><mo>∈</mo><msup><mi>ℕ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\alphe, \beta \in \mathbb{N}^n</annotation></semantics></math> we have that</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>↦</mo><msup><mi>x</mi> <mi>α</mi></msup><msub><mo>∂</mo> <mi>β</mi></msub><mi>f</mi></mrow><annotation encoding='application/x-tex'>
+  x \mapsto x^\alpha \partial_{\beta} f
+
+</annotation></semantics></math></div>
+<p>is a <a class='existingWikiWord' href='/nlab/show/bounded+function'>bounded function</a>, where</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>∂</mo> <mi>β</mi></msub><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><msup><mo>∂</mo> <mrow><msub><mi>β</mi> <mn>1</mn></msub></mrow></msup></mrow><mrow><mo>∂</mo><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>1</mn></msup><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>β</mi> <mn>1</mn></msub></mrow></msup></mrow></mfrac><mi>⋯</mi><mfrac><mrow><msup><mo>∂</mo> <mrow><msub><mi>β</mi> <mi>n</mi></msub></mrow></msup></mrow><mrow><mo>∂</mo><mo stretchy='false'>(</mo><msup><mi>x</mi> <mi>n</mi></msup><msup><mo stretchy='false'>)</mo> <mrow><msub><mi>β</mi> <mi>n</mi></msub></mrow></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>
+  \partial_\beta 
+  \;\coloneqq\;
+  \frac{\partial^{\beta_1}}{\partial (x^1)^{\beta_1}}
+  \cdots
+  \frac{\partial^{\beta_n}}{\partial (x^n)^{\beta_n}}
+
+</annotation></semantics></math></div>
+<p>are the given <a class='existingWikiWord' href='/nlab/show/partial+differentiation'>partial derivatives</a>.</p>
+</div>
+
+<div class='num_prop' id='Smooth0TypeIsSheavesOnSmoothMfd'>
+<h6 id='remark'>Remark</h6>
+
+<p>These Schwartz functions (def. <a class='maruku-ref' href='#FunctionsWithRapidlyDecreasingPartialDerivatives'>2</a>) form the <em><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a></em> <math class='maruku-mathml' display='inline' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}(\mathbb{R}^n)</annotation></semantics></math> used in the definition of <a class='existingWikiWord' href='/nlab/show/tempered+distribution'>tempered distributions</a> in <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a>.</p>
+</div>
+
+<h2 id='examples'>Examples</h2>
+
+<div class='num_example'>
+<h6 id='example'>Example</h6>
+
+<p>Not every rapidly decreasing function (def. <a class='maruku-ref' href='#RapidlyDecreasingFunction'>1</a>) has rapidly decreasing partial derivatives (def. <a class='maruku-ref' href='#FunctionsWithRapidlyDecreasingPartialDerivatives'>2</a>).</p>
+
+<p>For example the function <math class='maruku-mathml' display='inline' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>f \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≔</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msup><mi>x</mi> <mn>2</mn></msup></mrow></msup><mi>sin</mi><mo stretchy='false'>(</mo><msup><mi>e</mi> <mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  f(x) \coloneqq e^{-x^2}\sin(e^{x^2})
+
+</annotation></semantics></math></div>
+<p>is rapidly decreasing, but its first <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_de41bdcaff11110b943d4f8fe62ad65a75315506_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>′</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>2</mn><msup><mi>xe</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><msup><mi>x</mi> <mn>2</mn></msup></mrow></msup><mi>sin</mi><mo stretchy='false'>(</mo><msup><mi>e</mi> <mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msup><mo stretchy='false'>)</mo><mo>+</mo><mn>2</mn><mi>x</mi><mi>cos</mi><mo stretchy='false'>(</mo><msup><mi>e</mi> <mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  f&#39;(x) = -2xe^{-x^2}\sin(e^{x^2})+2x\cos(e^{x^2})
+
+</annotation></semantics></math></div>
+<p>is asymptotically linearly increasing, due to the second term.</p>
+</div>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/extreme+value+theorem'>extreme value theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>rapidly decreasing function</a></p>
-</li>
-
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous function</a>, <a class='existingWikiWord' href='/nlab/show/differentiable+map'>differentiable function</a>, <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth function</a></p>
 </li>
@@ -413,22 +477,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 15:38:53 
+  Created on November  2, 2017 15:47:04 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bounded+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bounded+function/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/bounded+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bounded+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/rapidly+decreasing+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/bounded+function" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/rapidly+decreasing+function" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/bounded+function" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/rapidly+decreasing+function" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/bounded+function" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/rapidly+decreasing+function" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
