--- a/pages/6151.html
+++ b/pages/6151.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,9 +308,19 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Brian J. Day is an Australian <a class='existingWikiWord' href='/nlab/show/category+theory'>category theorist</a>.</p>
+    <p>Brian John Day (1945-2012) was an Australian <a class='existingWikiWord' href='/nlab/show/category+theory'>category theorist</a>.</p>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_4bd73ba26893c14edd3bf33939f789838f5026df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<ul>
+<li>
+<p><a href='http://maths.mq.edu.au/~street/Day.pub.html'>Publications</a></p>
+</li>
+
+<li>
+<p><a href='https://www.austms.org.au/Publ/Gazette/2013/May13/Day.pdf'>Obituary by Ross Street</a></p>
+</li>
+</ul>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_7a701f569e0d8de69bb8638763089dcfe7290b06_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Day+convolution'>Day convolution</a></li>
@@ -325,14 +335,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 16, 2016 09:13:22 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.137.81)
+  Revised on November  2, 2017 15:14:20 
+  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
+  (108.39.130.142)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Brian+Day" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Brian+Day/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Brian+Day" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Brian+Day" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Brian+Day" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Brian+Day/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Brian+Day" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Brian+Day" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
