--- a/pages/18733.html
+++ b/pages/18733.html
@@ -310,11 +310,13 @@ margin-left: 0em;
 <div id="revision">
     <p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
 
-<p><strong>Definitions</strong></p>
-
 <p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
 </li>
@@ -336,18 +338,40 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
+
+<ul>
+<li>
+<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 08:13:27 
+  Revised on November  2, 2017 16:43:13 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/harmonic+analysis+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+analysis+-+contents/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/harmonic+analysis+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+analysis+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/harmonic+analysis+-+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/harmonic+analysis+-+contents/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/harmonic+analysis+-+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/harmonic+analysis+-+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
