--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,22 +308,26 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><math class='maruku-mathml' display='inline' id='mathml_80143f1f75b38e95de739e80bf820eade763167c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+    <p><math class='maruku-mathml' display='inline' id='mathml_90fb154df3b29abfdadb4605a1d9dc01fa5c8ae6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
 
-<p>Diagonal arrows: <math class='maruku-mathml' display='inline' id='mathml_80143f1f75b38e95de739e80bf820eade763167c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mo>↗</mo></mtd> <mtd><mo>↘</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>\array{\nearrow &amp; \searrow}</annotation></semantics></math></p>
+<p>Diagonal arrows: <math class='maruku-mathml' display='inline' id='mathml_90fb154df3b29abfdadb4605a1d9dc01fa5c8ae6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mo>↗</mo></mtd> <mtd><mo>↘</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>\array{\nearrow &amp; \searrow}</annotation></semantics></math></p>
 
-<p><math class='maruku-mathml' display='inline' id='mathml_80143f1f75b38e95de739e80bf820eade763167c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<p><math class='maruku-mathml' display='inline' id='mathml_90fb154df3b29abfdadb4605a1d9dc01fa5c8ae6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_90fb154df3b29abfdadb4605a1d9dc01fa5c8ae6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>ℓ</mi></mstyle></mrow><annotation encoding='application/x-tex'>
+  \mathbf{\ell}
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November  4, 2017 12:48:59 
+  Revised on November  4, 2017 18:25:30 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.69.162)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1203" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1203 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1204" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1204 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
